# azure-container-apps

./: AGENTS.md  README.md  marketplace.json
.claude-plugin/: marketplace.json
.github/: fabricbot.json
.github/ISSUE_TEMPLATE/: feature_request.md  issue-report-.md  issue-report.md
.github/policies/: fabricbot.json  resourceManagement.yml
.github/workflows/: deploy-url-redirects.yml  region-discovery.yml
aca-cli/preview/: README.md  install.ps1  install.sh  latest-version.txt
aca-getting-started/: CONTRIBUTING.md  FAQ.md  GETTING_STARTED.md  README.md  READY.md  SECURITY.md  UPLOAD_INSTRUCTIONS.md  _config.yml  index.html  region-availability.html  robots.txt  sitemap.xml  upload-direct.ps1  upload.ps1
aca-getting-started/.github/: PULL_REQUEST_TEMPLATE.md
aca-getting-started/data/: region-features.json
docs/aca-sandboxes/: eval-framework.md
docs/early/: express-overview.md  sandboxes-egress-policies.md  sandboxes-overview.md  sandboxes-snapshots-state-management.md
docs/images/: express-overview.md
evals/aca-sandboxes/: .gitignore  BASELINES.md  eval.yaml
plugin/: README.md  plugin.json
plugin/.claude-plugin/: plugin.json
plugin/scripts/: README.md  verify-aca-verbs.mjs
preview/ai-compose/: mcp-gateway-map.yml
scripts/region-discovery/: README.md  discover.py  pyproject.toml
templates/: README.md
templates/arm/: main.json
templates/azml-app/: Dockerfile  README.md  azcopy-installer.sh  entrypoint.sh  requirements.txt
templates/bicep/: main.bicep
url-redirects/: Dockerfile  README.md  generate-nginx-config.sh  redirects.yaml
(+120 files in other folders)
